<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
       <!-- <item
            android:id="@+id/nav_overview"
            android:title="@string/overview" />-->
        <item
            android:id="@+id/nav_category"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_dealers"
            android:title="@string/dealers" />

        <item
            android:id="@+id/nav_wishlist"
            android:title="@string/wishlist" />

        <item
            android:id="@+id/nav_mortgage"
            android:title="@string/mortgage" />


        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_business"
            android:title="@string/business" />

        <item
            android:id="@+id/nav_find_deals"
            android:title="@string/find_deals" />


        <item
            android:id="@+id/nav_news"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_notification"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us" />

    </group>

</menu>